@@ -1,1 +1,15 @@
 # Always-on-Top-Viewer
+
+## 簡介
+AOT Viewer是一個可以常駐在畫面頂層的視窗，支援放置文字與圖片。
+
+## 執行方式
+* 在command 上執行 java "AoT Viewer.jar" --module-path ".\lib" --add-modules=javafx.controls,javafx.web,javafx.graphics,javafx.base
+* 因為常有版本問題，故目前尚未打包成更方便執行的檔案，如執行時遇到此問題，請下載至一致版本的JRE與JDK(這部分尚無法完全解決)
+
+
+## 操作
+* 左鍵點擊右上角的按鈕可以選擇要放置的圖片
+* 右鍵點擊右上角的按鈕可以輸入想要顯示的文字，再點擊一次結束編輯
+* 在左上角長按左鍵可以拖曳視窗至想要的位置
+* 鍵盤的 pageDown 與 pageUp 可以調整畫面大小
